[project]
name = "litellm"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Moreira",email = "rafaelmoreira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "5.13.2"

